[gd_scene load_steps=73 format=2]

[ext_resource path="res://Assets/Image_Assets/Enemy_Assets/thumbnail_Slug spritesheet (1).png" type="Texture" id=1]
[ext_resource path="res://Important_Scenes/Characters/Enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Important_Scenes/Reusable/Hurtbox.gd" type="Script" id=3]
[ext_resource path="res://Important_Scenes/Characters/Enemies/Slug/Slug.gd" type="Script" id=4]
[ext_resource path="res://Assets/Image_Assets/Enemy_Assets/explosion1_5.png" type="Texture" id=5]
[ext_resource path="res://Important_Scenes/Reusable/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Image_Assets/World/light.png" type="Texture" id=8]
[ext_resource path="res://Important_Scenes/Characters/Enemies/Enemy_Stats.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 700, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 100, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 400, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 500, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 700, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "test",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 21.1896

[sub_resource type="Animation" id=56]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=57]
resource_name = "death"
length = 3.0
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 17, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=3]
resource_name = "test"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "test" ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 24.0

[sub_resource type="CircleShape2D" id=58]
radius = 75.1066

[sub_resource type="CircleShape2D" id=59]
radius = 306.105

[node name="Enemy" instance=ExtResource( 2 )]
z_index = 3
collision_layer = 4
script = ExtResource( 4 )
acceleration = 50
max_speed = 150

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( -1, 0.999992 )
scale = Vector2( 0.393333, 0.371111 )
frames = SubResource( 2 )
animation = "death"
frame = 1
playing = true

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 4 )

[node name="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 56 )
anims/death = SubResource( 57 )
anims/test = SubResource( 3 )

[node name="NavigationAgent2D" parent="." index="4"]
navigation_layers = 2

[node name="EnemyStats" parent="." index="5"]
script = ExtResource( 9 )

[node name="Hurtbox" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="Hurtbox" index="1"]

[node name="Hitbox" parent="." index="7" instance=ExtResource( 6 )]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 58 )

[node name="Light2D" type="Light2D" parent="." index="8"]
enabled = false
texture = ExtResource( 8 )
color = Color( 0.8, 0.498039, 0.235294, 1 )
energy = 0.73

[node name="PlayerDetect" type="Area2D" parent="." index="9"]
z_index = 3
z_as_relative = false
collision_layer = 4
collision_mask = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect" index="0"]
shape = SubResource( 59 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_started"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
