[gd_scene load_steps=11 format=2]

[ext_resource path="res://Important_Scenes/Characters/Enemies/Wendigo/Wendigo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Image_Assets/World/Bm+O0V.png" type="Texture" id=2]
[ext_resource path="res://Important_Scenes/Characters/Enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Important_Scenes/Reusable/Hitbox.gd" type="Script" id=4]
[ext_resource path="res://Important_Scenes/Reusable/Hurtbox.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 113.0
height = 200.0

[sub_resource type="CircleShape2D" id=3]
radius = 827.345

[sub_resource type="CircleShape2D" id=4]
radius = 103.044

[sub_resource type="CapsuleShape2D" id=5]
radius = 145.0
height = 132.0

[node name="Wendigo" instance=ExtResource( 3 )]
z_index = 3
script = ExtResource( 1 )
acceleration = 50
max_speed = 150

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -7, 23 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 6.111
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" index="0"]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="." index="8"]

[node name="Hitbox" type="Area2D" parent="." index="9"]
collision_layer = 32
collision_mask = 16
monitoring = false
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="." index="10"]
collision_layer = 64
collision_mask = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -10, 16 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="Hurtbox" index="1"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
